--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@200&display=swap');
+
 ---
 ---
 
-$sans-serif-font-family: "Quattrocento Sans", sans-serif;
+$sans-serif-font-family: "IBM Plex Sans KR", "Quattrocento Sans", sans-serif;
 $serif-font-family:      "PT Serif", Georgia, "Times New Roman", serif;
 $code-font-family:       "Source Code Pro", monospace;
 
