--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,7 +3,7 @@
 ---
 ---
 
-$sans-serif-font-family: "IBM Plex Sans KR", sans-serif;
+$sans-serif-font-family: "Quattrocento Sans", sans-serif;
 $serif-font-family:      "PT Serif", Georgia, "Times New Roman", serif;
 $code-font-family:       "Source Code Pro", monospace;
 
