--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,8 +1,10 @@
 ---
 ---
 
-$sans-serif-font-family: "Quattrocento Sans", sans-serif;
-$serif-font-family:      "PT Serif", Georgia, "Times New Roman", serif;
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@200;600&display=swap');
+
+$sans-serif-font-family: "IBM Plex Sans KR", sans-serif;
+$serif-font-family:      "IBM Plex Sans KR", Georgia, "IBM Plex Sans KR", serif;
 $code-font-family:       "Source Code Pro", monospace;
 
 $body-color:             #505050;
