--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,20 +7,20 @@ $sans-serif-font-family: "IBM Plex Sans KR", sans-serif;
 $serif-font-family:      "IBM Plex Sans KR", Georgia, "IBM Plex Sans KR", serif;
 $code-font-family:       "Source Code Pro", monospace;
 
-$body-color:             #505050;
+$body-color:             #403d39;
 $link-color:             black;
 
-$code-background-color:   #f5f5f5;
+$code-background-color:   #EEEEEE;
 $pagination-button-color: #e0e0e0;
 
-$dark-gray-color:        #333;
-$light-gray-color:       #999;
-$extra-light-gray-color: #ccc;
+$dark-gray-color:        #252422;
+$light-gray-color:       #B0A99D;
+$extra-light-gray-color: #eb5e28;
 
 $container-responsive-width: 768px;
 $elements-responsive-width:  30em;
 
-$icon-transition-time: .5s;
+$icon-transition-time: .3s;
 $envelope-color:       #f39c12;
 $twitter-color:        #00aced;
 $instagram-color:      #375989;
